--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -6,7 +6,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
-      <a class="brand" href="#">Kaenoheya</a>
+      <%= link_to t("title.top"), root_path, class: "brand" %>
       <div class="container nav-collapse">
         <ul class="nav">
           <li><%= link_to "Link3", "/path3"  %></li>
