fixes #10 : Internationalization correspondence and a side bar addition.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,18 +21,12 @@
    <div class="container">
       <div class="content">
         <div class="row">
-           <div class="span9">
-              <%= yield %>
-            </div>
-            <div class="span3">
-              <div class="well sidebar-nav">
-                <h3>Sidebar</h3>
-                <ul class="nav nav-list">
-                  <li class="nav-header">Sidebar</li>
-                  <li><%= link_to "Link1", "/path1"  %></li>
-                </ul>
-              </div>
-            </div>
+          <div class="span8">
+            <%= yield %>
+          </div>
+          <div class="span4">
+            <%= render "shared/sidebar" %>
+          </div>
         </div>
       </div>
 
