--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "Kaenoheya" %></title>
+    <title><%= content_for?(:title) ? yield(:title) : t("title.top") %></title>
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag "application", media: "all" %>
 
