--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,4 +1,14 @@
 <div class="well sidebar-nav">
+  <h4><%= t("sidebar.profile") %></h4>
+  <ul class="nav nav-list">
+    <li><%= image_tag "kae.jpg" %></li>
+    <li><%= t("profile.author") %><%= t("profile.author_text") %></li>
+    <li><%= t("profile.twitter") %><%= t("profile.twitter_text") %></li>
+    <li><%= t("profile.favorite") %><%= t("profile.favorite_text") %></li>
+  </ul>
+</div>
+
+<div class="well sidebar-nav">
   <h4><%= t("sidebar.menu") %></h4>
   <ul class="nav nav-list">
     <li><%= link_to t("menu.top"), root_path %></li>
