--- a/app/views/updated_informations/edit.html.erb
+++ b/app/views/updated_informations/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing updated_information</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @updated_information %> |
-<%= link_to 'Back', updated_informations_path %>
+<%- model_class = @updated_information.class -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => t('helpers.titles.edit', :model => model_class.model_name.human,
+                                   :default => "Edit #{model_class.model_name.human}") %></h1>
+</div>
+<%= render :partial => 'form' %>
