--- a/app/views/updated_informations/show.html.erb
+++ b/app/views/updated_informations/show.html.erb
@@ -1,40 +1,37 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = @updated_information.class -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
+</div>
 
-<p>
-  <b>Display at:</b>
-  <%= @updated_information.display_at %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:display_at) %>:</strong></dt>
+  <dd><%= @updated_information.display_at %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:version_id) %>:</strong></dt>
+  <dd><%= @updated_information.version_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:title) %>:</strong></dt>
+  <dd><%= @updated_information.title %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:news) %>:</strong></dt>
+  <dd><%= @updated_information.news %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:comment) %>:</strong></dt>
+  <dd><%= @updated_information.comment %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:draft) %>:</strong></dt>
+  <dd><%= @updated_information.draft %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:deleted_at) %>:</strong></dt>
+  <dd><%= @updated_information.deleted_at %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:mini_label) %>:</strong></dt>
+  <dd><%= @updated_information.mini_label %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:mini_label_option) %>:</strong></dt>
+  <dd><%= @updated_information.mini_label_option %></dd>
+</dl>
 
-<p>
-  <b>Version:</b>
-  <%= @updated_information.version_id %>
-</p>
-
-<p>
-  <b>Title:</b>
-  <%= @updated_information.title %>
-</p>
-
-<p>
-  <b>News:</b>
-  <%= @updated_information.news %>
-</p>
-
-<p>
-  <b>Comment:</b>
-  <%= @updated_information.comment %>
-</p>
-
-<p>
-  <b>Draft:</b>
-  <%= @updated_information.draft %>
-</p>
-
-<p>
-  <b>Deleted at:</b>
-  <%= @updated_information.deleted_at %>
-</p>
-
-
-<%= link_to 'Edit', edit_updated_information_path(@updated_information) %> |
-<%= link_to 'Back', updated_informations_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              updated_informations_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_updated_information_path(@updated_information), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              updated_information_path(@updated_information),
+              :method => 'delete',
+              :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
+              :class => 'btn btn-danger' %>
+</div>
