--- a/app/views/updated_informations/index.html.erb
+++ b/app/views/updated_informations/index.html.erb
@@ -5,48 +5,18 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
       <th><%= model_class.human_attribute_name(:display_at) %></th>
-      <th><%= model_class.human_attribute_name(:version_id) %></th>
+      <th><%#= model_class.human_attribute_name(:version_id) %></th>
       <th><%= model_class.human_attribute_name(:title) %></th>
-      <th><%= model_class.human_attribute_name(:news) %></th>
-      <th><%= model_class.human_attribute_name(:comment) %></th>
-      <th><%= model_class.human_attribute_name(:draft) %></th>
-      <th><%= model_class.human_attribute_name(:deleted_at) %></th>
-      <th><%= model_class.human_attribute_name(:mini_label) %></th>
-      <th><%= model_class.human_attribute_name(:mini_label_option) %></th>
-      <th><%= model_class.human_attribute_name(:created_at) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
   <tbody>
     <% @updated_informations.each do |updated_information| %>
       <tr>
-        <td><%= link_to updated_information.id, updated_information_path(updated_information) %></td>
         <td><%= updated_information.display_at %></td>
-        <td><%= updated_information.version_id %></td>
+        <td><%#= updated_information.version_id %></td>
         <td><%= updated_information.title %></td>
-        <td><%= updated_information.news %></td>
-        <td><%= updated_information.comment %></td>
-        <td><%= updated_information.draft %></td>
-        <td><%= updated_information.deleted_at %></td>
-        <td><%= updated_information.mini_label %></td>
-        <td><%= updated_information.mini_label_option %></td>
-        <td><%=l updated_information.created_at %></td>
-        <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_updated_information_path(updated_information), :class => 'btn btn-mini' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      updated_information_path(updated_information),
-                      :method => :delete,
-                      :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
-                      :class => 'btn btn-mini btn-danger' %>
-        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<%= link_to t('.new', :default => t("helpers.links.new")),
-            new_updated_information_path,
-            :class => 'btn btn-primary' %>
