refs #23 : 壁紙を追加

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -34,3 +34,11 @@ body {
 
 @linkColor: #336633;
 
+@media (min-width: 980px) {
+  body {
+    padding-top: 60px;
+    background-image:url("background_images/clover.jpg");
+  }
+}
+
+
