refs #23 テーブルのオンマウス時を透明に変更

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -47,5 +47,11 @@ body {
 
 .well {
   background-color: #f0fff0;
+  .h4 {
+    font-color: #336633;
+  }
 }
 
+.table tbody tr:hover td, .table tbody tr:hover th {
+    background-color: transparent;
+}
