refs #23 : テーブル背景色を変更

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -53,5 +53,10 @@ body {
 }
 
 .table tbody tr:hover td, .table tbody tr:hover th {
-    background-color: transparent;
+  background-color: transparent;
 }
+
+.table-striped tbody tr:nth-child(2n+1) td, .table-striped tbody tr:nth-child(2n+1) th {
+  background-color: #f0fff0;
+}
+
