--- a/app/views/updated_informations/show.html.erb
+++ b/app/views/updated_informations/show.html.erb
@@ -1,6 +1,6 @@
 <%- model_class = @updated_information.class -%>
 <div class="page-header">
-  <h3><%=t '.title', :default => model_class.model_name.human %></h3>
+  <h3><%= link_to t('.title', :default => model_class.model_name.human), updated_informations_path %></h3>
 </div>
 
 <dl class="dl-horizontal">
