--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,46 +1,16 @@
 <%- model_class = Blog.new.class -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
+  <h4><%= link_to t('.title', :default => model_class.model_name.human.pluralize), blogs_path %></h4>
 </div>
 <table class="table table-striped">
-  <thead>
-    <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:title) %></th>
-      <th><%= model_class.human_attribute_name(:blog_category_code) %></th>
-      <th><%= model_class.human_attribute_name(:contents1) %></th>
-      <th><%= model_class.human_attribute_name(:contents2) %></th>
-      <th><%= model_class.human_attribute_name(:draft) %></th>
-      <th><%= model_class.human_attribute_name(:deleted_at) %></th>
-      <th><%= model_class.human_attribute_name(:created_at) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
-    </tr>
-  </thead>
   <tbody>
     <% @blogs.each do |blog| %>
       <tr>
-        <td><%= link_to blog.id, blog_path(blog) %></td>
         <td><%= blog.title %></td>
-        <td><%= blog.blog_category_code %></td>
         <td><%= blog.contents1 %></td>
-        <td><%= blog.contents2 %></td>
-        <td><%= blog.draft %></td>
-        <td><%= blog.deleted_at %></td>
         <td><%=l blog.created_at %></td>
-        <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_blog_path(blog), :class => 'btn btn-mini' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      blog_path(blog),
-                      :method => :delete,
-                      :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
-                      :class => 'btn btn-mini btn-danger' %>
-        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<%= link_to t('.new', :default => t("helpers.links.new")),
-            new_blog_path,
-            :class => 'btn btn-primary' %>
