fixes #16 : ブログ一覧画面の作成により、ブログのリンクを挿入

--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -13,7 +13,7 @@
   <ul class="nav nav-list">
     <li><%= link_to t("menu.top"), root_path %></li>
     <li><%= t("menu.top_text") %></li>
-    <li><%= link_to t("menu.blog"), root_path %></li>
+    <li><%= link_to t("menu.blog"), blogs_path %></li>
     <li><%= t("menu.blog_text")  %></li>
   </ul>
 </div>
