--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -8,6 +8,7 @@
   </ul>
 </div>
 
+<% if @menu_name == t("menu.top") %>
 <div class="well sidebar-nav">
   <h4><%= t("sidebar.menu") %></h4>
   <ul class="nav nav-list">
@@ -17,4 +18,5 @@
     <li><%= t("menu.blog_text")  %></li>
   </ul>
 </div>
+<% end %>
  
