--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,31 +1,6 @@
-<%- model_class = @blog.class -%>
-<div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
-</div>
-
-<dl class="dl-horizontal">
-  <dt><strong><%= model_class.human_attribute_name(:title) %>:</strong></dt>
-  <dd><%= @blog.title %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:blog_category_code) %>:</strong></dt>
-  <dd><%= @blog.blog_category_code %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:contents1) %>:</strong></dt>
-  <dd><%= @blog.contents1 %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:contents2) %>:</strong></dt>
-  <dd><%= @blog.contents2 %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:draft) %>:</strong></dt>
-  <dd><%= @blog.draft %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:deleted_at) %>:</strong></dt>
-  <dd><%= @blog.deleted_at %></dd>
-</dl>
-
-<div class="form-actions">
-  <%= link_to t('.back', :default => t("helpers.links.back")),
-              blogs_path, :class => 'btn'  %>
-  <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_blog_path(@blog), :class => 'btn' %>
-  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              blog_path(@blog),
-              :method => 'delete',
-              :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
-              :class => 'btn btn-danger' %>
-</div>
+<table class="table">
+  <%= render partial: "exordium", locals: {blog: @blog} %>
+  <tr>
+    <td colspan="2"><%= to_br(@blog.contents2).html_safe %></td>
+  </tr>
+</table>
