fixes #26 : メインメニューにTOPとBLOGを追加

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -9,7 +9,8 @@
       <%= link_to t("title.top"), root_path, class: "brand" %>
       <div class="container nav-collapse">
         <ul class="nav">
-          <li><%= link_to "Link3", "/path3"  %></li>
+          <li><%= link_to t("menu.top"), root_path %></li>
+          <li><%= link_to t("menu.blog"), blogs_path %></li>
         </ul>
       </div>
      </div>
