--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -12,9 +12,26 @@
           <li><%= link_to t("menu.top"), root_path %></li>
           <li><%= link_to t("menu.blog"), blogs_path %></li>
         </ul>
+
+        <ul class="nav pull-right">
+        <% if current_user %>
+          <li><% link_to "@" + current_user.screen_name, "https://twitter.com/#{current_user.screen_name}", target: "_blank" %></li>
+          <li><%= link_to "Logout" , logout_path %></li>
+        <% else %>
+          <li class="dropdown" id="menu1">
+            <a href="#menu1" class="dropdown-toggle" data-toggle="dropdown">
+              <%= t("menu.my_account") %>
+              <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "Twitterでログイン", "/auth/twitter" %></li>
+              <li><%#= link_to "facebookでログイン", "/auth/facebook" %></li>
+            </ul>
+          </li>
+        <% end %>
+        </ul>
       </div>
-     </div>
+    </div>
   </div>
 </div>
 
- 
