refs #34 : Twitterアカウントでログイン

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -15,7 +15,7 @@
 
         <ul class="nav pull-right">
         <% if current_user %>
-          <li><% link_to "@" + current_user.screen_name, "https://twitter.com/#{current_user.screen_name}", target: "_blank" %></li>
+          <li><%= link_to "@" + current_user.screen_name, "https://twitter.com/#{current_user.screen_name}", target: "_blank" %></li>
           <li><%= link_to "Logout" , logout_path %></li>
         <% else %>
           <li class="dropdown" id="menu1">
