--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -11,6 +11,19 @@
         <ul class="nav">
           <li><%= link_to t("menu.top"), root_path %></li>
           <li><%= link_to t("menu.blog"), blogs_path %></li>
+
+          <% if current_user and current_user.admin %>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= t("menu.admin") %><span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><%= link_to t("menu.admin_blog"), root_path %></li>
+              <li><%= link_to t("menu.admin_updated_information"), root_path %></li>
+              <li><%= link_to t("menu.admin_dashboard"), root_path %></li>
+              <li><%= link_to t("menu.admin_setting"), root_path %></li>
+            </ul> 
+          </li>
+        <% end %>
+
         </ul>
 
         <ul class="nav pull-right">
