--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -16,7 +16,7 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= t("menu.admin") %><span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><%= link_to t("menu.admin_blog"), root_path %></li>
+              <li><%= link_to t("menu.admin_blog"), admin_blogs_path %></li>
               <li><%= link_to t("menu.admin_updated_information"), root_path %></li>
               <li><%= link_to t("menu.admin_dashboard"), root_path %></li>
               <li><%= link_to t("menu.admin_setting"), root_path %></li>
@@ -48,3 +48,6 @@
   </div>
 </div>
 
+<% if @admin_menu %>
+
+<% end %>
