fixes #35 : 管理画面に管理メニューを表示

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -49,5 +49,13 @@
 </div>
 
 <% if @admin_menu %>
-
+  <div class="container">
+    <ul class="nav nav-pills">
+      <li><%= link_to t("admin_menu.blogs"), admin_blogs_path %></li>
+      <li><%= link_to t("admin_menu.new_blog"), new_admin_blog_path %></li>
+      <li><%= link_to t("admin_menu.comments"), admin_blogs_path %></li>
+      <li><%= link_to t("admin_menu.mail"), admin_blogs_path %></li>
+      <li><%= link_to t("admin_menu.access"), admin_blogs_path %></li>
+    </ul>
+  </div>
 <% end %>
