--- a/app/views/admin/blogs/show.html.erb
+++ b/app/views/admin/blogs/show.html.erb
@@ -1,35 +1,31 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = @blog.class -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
+</div>
 
-<p>
-  <b>Title:</b>
-  <%= @admin_blog.title %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:title) %>:</strong></dt>
+  <dd><%= @blog.title %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:blog_category_code) %>:</strong></dt>
+  <dd><%= @blog.blog_category_code %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:contents1) %>:</strong></dt>
+  <dd><%= @blog.contents1 %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:contents2) %>:</strong></dt>
+  <dd><%= @blog.contents2 %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:draft) %>:</strong></dt>
+  <dd><%= @blog.draft %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:deleted_at) %>:</strong></dt>
+  <dd><%= @blog.deleted_at %></dd>
+</dl>
 
-<p>
-  <b>Blog category code:</b>
-  <%= @admin_blog.blog_category_code %>
-</p>
-
-<p>
-  <b>Contents1:</b>
-  <%= @admin_blog.contents1 %>
-</p>
-
-<p>
-  <b>Contents2:</b>
-  <%= @admin_blog.contents2 %>
-</p>
-
-<p>
-  <b>Draft:</b>
-  <%= @admin_blog.draft %>
-</p>
-
-<p>
-  <b>Deleted at:</b>
-  <%= @admin_blog.deleted_at %>
-</p>
-
-
-<%= link_to 'Edit', edit_admin_blog_path(@admin_blog) %> |
-<%= link_to 'Back', admin_blogs_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              admin_blogs_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_admin_blog_path(@blog), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              admin_blog_path(@blog),
+              :method => 'delete',
+              :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
+              :class => 'btn btn-danger' %>
+</div>
