--- a/app/views/admin/blogs/index.html.erb
+++ b/app/views/admin/blogs/index.html.erb
@@ -1,32 +1,19 @@
 <%- model_class = Blog.new.class -%>
-<div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
-</div>
-<table class="table table-striped">
+<table class="table">
   <thead>
     <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:title) %></th>
-      <th><%= model_class.human_attribute_name(:blog_category_code) %></th>
-      <th><%= model_class.human_attribute_name(:contents1) %></th>
-      <th><%= model_class.human_attribute_name(:contents2) %></th>
-      <th><%= model_class.human_attribute_name(:draft) %></th>
-      <th><%= model_class.human_attribute_name(:deleted_at) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%= model_class.human_attribute_name(:title) %></th>
+      <th><%= model_class.human_attribute_name(:draft) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
   <tbody>
     <% @admin_blogs.each do |blog| %>
       <tr>
-        <td><%= link_to blog.id, admin_blog_path(blog) %></td>
-        <td><%= blog.title %></td>
-        <td><%= blog.blog_category_code %></td>
-        <td><%= blog.contents1 %></td>
-        <td><%= blog.contents2 %></td>
-        <td><%= blog.draft %></td>
-        <td><%= blog.deleted_at %></td>
         <td><%=l blog.created_at %></td>
+        <td><%= blog.title %></td>
+        <td><%= blog.draft %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
                       edit_admin_blog_path(blog), :class => 'btn btn-mini' %>
@@ -40,7 +27,3 @@
     <% end %>
   </tbody>
 </table>
-
-<%= link_to t('.new', :default => t("helpers.links.new")),
-            new_admin_blog_path,
-            :class => 'btn btn-primary' %>
