--- a/app/views/admin/blogs/_form.html.erb
+++ b/app/views/admin/blogs/_form.html.erb
@@ -1,14 +1,14 @@
-<%= form_for @blog, :html => { :class => 'form-horizontal' } do |f| %>
+<%= form_for @admin_blog, :html => { :class => 'form-horizontal' } do |f| %>
+  <div class="control-group">
+    <%= f.label :create_at, class: 'control-label' %>
+    <div class="controls">
+      <%= f.datetime_select :created_at, datetime_separator: "　", include_seconds: true, use_month_numbers: true, class: "date_time" %>
+    </div>
+  </div>
   <div class="control-group">
     <%= f.label :title, :class => 'control-label' %>
     <div class="controls">
       <%= f.text_field :title, :class => 'text_field' %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :blog_category_code, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.number_field :blog_category_code, :class => 'number_field' %>
     </div>
   </div>
   <div class="control-group">
@@ -21,18 +21,6 @@
     <%= f.label :contents2, :class => 'control-label' %>
     <div class="controls">
       <%= f.text_area :contents2, :class => 'text_area' %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :draft, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.check_box :draft, :class => 'check_box' %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :deleted_at, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.datetime_select :deleted_at, :class => 'datetime_select' %>
     </div>
   </div>
 
