refs #40 : 空・文字数超過によるエラーの表示

--- a/app/views/admin/blogs/index.html.erb
+++ b/app/views/admin/blogs/index.html.erb
@@ -1,5 +1,10 @@
 <%- model_class = Blog.new.class -%>
-<%= notice %>
+<% if notice %>
+  <div class="alert alert-success">
+    <button class="close" data-dismiss="alert">×</button>
+    <%= notice %>
+  </div>
+<% end %>
 
 <table class="table">
   <thead>
