--- a/app/views/admin/blogs/_form.html.erb
+++ b/app/views/admin/blogs/_form.html.erb
@@ -1,6 +1,19 @@
 <%= form_for @admin_blog, :html => { :class => 'form-horizontal' } do |f| %>
+  <% if @admin_blog.errors.any? %>
+    <div class="alert alert-error">
+      <button class="close" data-dismiss="alert">×</button>
+      <%#= pluralize(@admin_blog.errors.count, "error") %>
+      <%= t("activerecord.errors.template.header.other", count: @admin_blog.errors.count) %>
+      <ul>
+      <% @admin_blog.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
   <div class="control-group">
-    <%= f.label :create_at, class: 'control-label' %>
+    <%= f.label :created_at, class: 'control-label' %>
     <div class="controls">
       <%= f.datetime_select :created_at, datetime_separator: "　", include_seconds: true, use_month_numbers: true, class: "date_time" %>
     </div>
