--- a/app/views/admin/blog_comments/show.html.erb
+++ b/app/views/admin/blog_comments/show.html.erb
@@ -1,70 +1,45 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = @blog_comment.class -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
+</div>
 
-<p>
-  <b>Blog:</b>
-  <%= @admin_blog_comment.blog_id %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:blog_id) %>:</strong></dt>
+  <dd><%= @blog_comment.blog_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:title) %>:</strong></dt>
+  <dd><%= @blog_comment.title %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:author) %>:</strong></dt>
+  <dd><%= @blog_comment.author %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:content) %>:</strong></dt>
+  <dd><%= @blog_comment.content %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:url) %>:</strong></dt>
+  <dd><%= @blog_comment.url %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:mail) %>:</strong></dt>
+  <dd><%= @blog_comment.mail %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:ip) %>:</strong></dt>
+  <dd><%= @blog_comment.ip %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:host) %>:</strong></dt>
+  <dd><%= @blog_comment.host %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:password) %>:</strong></dt>
+  <dd><%= @blog_comment.password %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:salt) %>:</strong></dt>
+  <dd><%= @blog_comment.salt %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:admin) %>:</strong></dt>
+  <dd><%= @blog_comment.admin %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:mixi) %>:</strong></dt>
+  <dd><%= @blog_comment.mixi %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:draft) %>:</strong></dt>
+  <dd><%= @blog_comment.draft %></dd>
+</dl>
 
-<p>
-  <b>Title:</b>
-  <%= @admin_blog_comment.title %>
-</p>
-
-<p>
-  <b>Author:</b>
-  <%= @admin_blog_comment.author %>
-</p>
-
-<p>
-  <b>Content:</b>
-  <%= @admin_blog_comment.content %>
-</p>
-
-<p>
-  <b>Url:</b>
-  <%= @admin_blog_comment.url %>
-</p>
-
-<p>
-  <b>Mail:</b>
-  <%= @admin_blog_comment.mail %>
-</p>
-
-<p>
-  <b>Ip:</b>
-  <%= @admin_blog_comment.ip %>
-</p>
-
-<p>
-  <b>Host:</b>
-  <%= @admin_blog_comment.host %>
-</p>
-
-<p>
-  <b>Password:</b>
-  <%= @admin_blog_comment.password %>
-</p>
-
-<p>
-  <b>Salt:</b>
-  <%= @admin_blog_comment.salt %>
-</p>
-
-<p>
-  <b>Admin:</b>
-  <%= @admin_blog_comment.admin %>
-</p>
-
-<p>
-  <b>Mixi:</b>
-  <%= @admin_blog_comment.mixi %>
-</p>
-
-<p>
-  <b>Draft:</b>
-  <%= @admin_blog_comment.draft %>
-</p>
-
-
-<%= link_to 'Edit', edit_admin_blog_comment_path(@admin_blog_comment) %> |
-<%= link_to 'Back', admin_blog_comments_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              admin_blog_comments_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_admin_blog_comment_path(@blog_comment), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              admin_blog_comment_path(@blog_comment),
+              :method => 'delete',
+              :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
+              :class => 'btn btn-danger' %>
+</div>
