--- a/app/views/blog_comments/_form.html.erb
+++ b/app/views/blog_comments/_form.html.erb
@@ -1,10 +1,3 @@
-<%= form_for @blog_comment, :html => { :class => 'form-horizontal' } do |f| %>
-  <div class="control-group">
-    <%= f.label :blog_id, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.number_field :blog_id, :class => 'number_field' %>
-    </div>
-  </div>
   <div class="control-group">
     <%= f.label :title, :class => 'control-label' %>
     <div class="controls">
@@ -15,12 +8,6 @@
     <%= f.label :author, :class => 'control-label' %>
     <div class="controls">
       <%= f.text_field :author, :class => 'text_field' %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :content, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_area :content, :class => 'text_area' %>
     </div>
   </div>
   <div class="control-group">
@@ -36,51 +23,28 @@
     </div>
   </div>
   <div class="control-group">
-    <%= f.label :ip, :class => 'control-label' %>
+    <%= f.label :content, :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_field :ip, :class => 'text_field' %>
+      <%= f.text_area :content, :class => 'text_area' %>
     </div>
   </div>
-  <div class="control-group">
-    <%= f.label :host, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :host, :class => 'text_field' %>
-    </div>
-  </div>
+<% unless @blog %>
   <div class="control-group">
     <%= f.label :password, :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_field :password, :class => 'text_field' %>
+      <%= f.password_field :password, :class => 'text_field' %>
     </div>
   </div>
-  <div class="control-group">
-    <%= f.label :salt, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :salt, :class => 'text_field' %>
-    </div>
-  </div>
+<% end %>
   <div class="control-group">
     <%= f.label :admin, :class => 'control-label' %>
     <div class="controls">
       <%= f.check_box :admin, :class => 'check_box' %>
     </div>
   </div>
-  <div class="control-group">
-    <%= f.label :mixi, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.check_box :mixi, :class => 'check_box' %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :draft, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.check_box :draft, :class => 'check_box' %>
-    </div>
-  </div>
 
   <div class="form-actions">
     <%= f.submit nil, :class => 'btn btn-primary' %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                blog_comments_path, :class => 'btn' %>
+                blogs_path, :class => 'btn' %>
   </div>
-<% end %>
