--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -4,3 +4,7 @@
     <td colspan="2"><%= to_br(@blog.contents2).html_safe %></td>
   </tr>
 </table>
+
+<%= form_for @blog_comment, html: {class: 'form-horizontal'}, url: confirm_blog_blog_comments_path(blog_id: @blog.id) do |f| %>
+  <%= render partial: "blog_comments/form", locals: {f: f} %>
+<% end %>
