fixes #31 : 管理者のみが閲覧可能なコメントを非表示にし、各ブログのコメントを表示

--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -8,3 +8,7 @@
 <%= form_for @blog_comment, html: {class: 'form-horizontal'}, url: confirm_blog_blog_comments_path(blog_id: @blog.id) do |f| %>
   <%= render partial: "blog_comments/form", locals: {f: f} %>
 <% end %>
+
+<table class="table">
+  <%= render :partial => @blog_comments, :spacer_template => "blog_comments/separator" %>
+</table>
