--- a/app/views/blogs/_exordium.html.erb
+++ b/app/views/blogs/_exordium.html.erb
@@ -1,6 +1,6 @@
 <tr>
   <th><%= link_to blog.title, blog %></th>
-  <th style="font-weight:normal"><%=l blog.created_at %></th>
+  <th style="font-weight:normal" class="text_right"><%= l blog.created_at %></th>
 </tr>
 <tr>
   <td colspan="2"><%= to_br(blog.contents1).html_safe %></td>
