fixes #33 : 管理者のみが閲覧可能なコメントの日付を右寄せに修正

--- a/app/views/blog_comments/_blog_comment.html.erb
+++ b/app/views/blog_comments/_blog_comment.html.erb
@@ -1,7 +1,7 @@
 <% if blog_comment.admin %>
   <tr>
     <td><%= t(".admin") %></td>
-    <td><%= l blog_comment.created_at %></td>
+    <td class="text_right"><%= l blog_comment.created_at %></td>
   </tr>
 <% else %>
   <tr>
