--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -54,6 +54,7 @@
       <li><%= link_to t("admin_menu.blogs"), admin_blogs_path %></li>
       <li><%= link_to t("admin_menu.new_blog"), new_admin_blog_path %></li>
       <li><%= link_to t("admin_menu.comments"), admin_blogs_path %></li>
+      <li><%= link_to t("admin_menu.links"), admin_blogs_path %></li>
       <li><%= link_to t("admin_menu.mail"), admin_blogs_path %></li>
       <li><%= link_to t("admin_menu.access"), admin_blogs_path %></li>
     </ul>
