--- a/app/views/admin/blog_links/edit.html.erb
+++ b/app/views/admin/blog_links/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing admin_blog_link</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @admin_blog_link %> |
-<%= link_to 'Back', admin_blog_links_path %>
+<%- model_class = @blog_link.class -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => t('helpers.titles.edit', :model => model_class.model_name.human,
+                                   :default => "Edit #{model_class.model_name.human}") %></h1>
+</div>
+<%= render :partial => 'form' %>
