--- a/app/views/admin/blog_links/new.html.erb
+++ b/app/views/admin/blog_links/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New admin_blog_link</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', admin_blog_links_path %>
+<%- model_class = @blog_link.class -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => t('helpers.titles.new', :model => model_class.model_name.human,
+                                 :default => "New #{model_class.model_name.human}") %></h1>
+</div>
+<%= render :partial => 'form' %>
