--- a/app/views/admin/blog_links/show.html.erb
+++ b/app/views/admin/blog_links/show.html.erb
@@ -1,40 +1,33 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = @blog_link.class -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
+</div>
 
-<p>
-  <b>Title:</b>
-  <%= @admin_blog_link.title %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:title) %>:</strong></dt>
+  <dd><%= @blog_link.title %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:author) %>:</strong></dt>
+  <dd><%= @blog_link.author %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:introduction) %>:</strong></dt>
+  <dd><%= @blog_link.introduction %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:url) %>:</strong></dt>
+  <dd><%= @blog_link.url %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:position) %>:</strong></dt>
+  <dd><%= @blog_link.position %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:draft) %>:</strong></dt>
+  <dd><%= @blog_link.draft %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:deleted_at) %>:</strong></dt>
+  <dd><%= @blog_link.deleted_at %></dd>
+</dl>
 
-<p>
-  <b>Author:</b>
-  <%= @admin_blog_link.author %>
-</p>
-
-<p>
-  <b>Introduction:</b>
-  <%= @admin_blog_link.introduction %>
-</p>
-
-<p>
-  <b>Url:</b>
-  <%= @admin_blog_link.url %>
-</p>
-
-<p>
-  <b>Position:</b>
-  <%= @admin_blog_link.position %>
-</p>
-
-<p>
-  <b>Draft:</b>
-  <%= @admin_blog_link.draft %>
-</p>
-
-<p>
-  <b>Deleted at:</b>
-  <%= @admin_blog_link.deleted_at %>
-</p>
-
-
-<%= link_to 'Edit', edit_admin_blog_link_path(@admin_blog_link) %> |
-<%= link_to 'Back', admin_blog_links_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              admin_blog_links_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_admin_blog_link_path(@blog_link), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              admin_blog_link_path(@blog_link),
+              :method => 'delete',
+              :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
+              :class => 'btn btn-danger' %>
+</div>
